# NewArduinoFaceDetect

./: CMakeLists.txt  README.md  main.cpp
Adafruit/sketch_jan15a/: BluefruitConfig.h  sketch_jan15a.ino
headers/: Bluetooth.cpp  Bluetooth.hpp  CameraDetect.cpp  CameraDetect.hpp  Com.cpp  Com.hpp
include/: Bluetooth.cpp  Bluetooth.hpp  CameraDetect.cpp  CameraDetect.hpp
test/: test.cpp  test2.cpp  test3.cpp  test4.cpp
